DIAC-2517 - fix issues upgrading es to v9